--- a/linkdump/templates/linkdump/tag_list.html
+++ b/linkdump/templates/linkdump/tag_list.html
@@ -1,6 +1,6 @@
 
 {% extends "base.html" %}
-{% load i18n future mptt_tags mezzanine_tags linkdump_filters %}
+{% load i18n mptt_tags mezzanine_tags linkdump_filters %}
 
 {% block meta_title %}{{ keyword.title }} {% trans "Links" %}{% endblock %}
 
