--- a/linkdump/templates/linkdump/list.html
+++ b/linkdump/templates/linkdump/list.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n future mptt_tags mezzanine_tags linkdump_filters %}
+{% load i18n mptt_tags mezzanine_tags linkdump_filters %}
 
 {% block meta_title %}{{ category|default:"" }} {% trans "Links" %}{% endblock %}
 
